cargo-features = ["edition2021"]
[package]
authors = ["Nico Lehmann <nlehmann@fb.com>"]
edition = "2021"
name = "jazz"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
